--- a/shard.yml
+++ b/shard.yml
@@ -8,11 +8,7 @@ targets:
   command_executor:
     main: src/command_executor.cr
 
-crystal: 0.27.0
-
-license: MIT
-
-
 dependencies:
   kemal:
     github: kemalcr/kemal
+    commit: a8c0f09b858162bd13c96663febef5527b322a32 # remove when fix will be released
